--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="copyright">2025 &copy; Yasmeen Bell</p>
+        <p class="footer__copyright">2025 &copy; Yasmeen Bell</p>
       </footer>
     </div>
   </body>
